              kept as a deprecated alias.
            - Routines retriangulate() and simplifyExhaustive() no longer
              throw an exception when called on an empty triangulation.
            - Routine simplifyExhaustive() now ensures that any change to the
              triangulation happens on the calling thread.
        Struct Unprotected:
            - New C++-only type that allows in-built safety checks to be
              disabled in some specific circumstances.
        Class Vector<T>:
            - Added a copy constructor that takes a vector whose elements are
              of a different type.
            - Added support for tight encodings and decodings.
            - New routine hash(), which uses the tight encoding.
        Class Vector3D:
            - New class to support floating-point 3-D geometry.
        Class Vertex<3>:
            - Vertex<3>::LinkType has been renamed to Vertex<3>::Link, and is
              now a scoped enumeration for better type safety.  The old enum
              constants (e.g., Vertex<3>::SPHERE) have been renamed as scoped
              enum values (e.g., Vertex<3>::Link::Sphere).  The old names have
              been kept as deprecated compile-time class constants of Vertex<3>.
        Function binomMedium():
            - Now supports arguments n ≤ 61 (not n ≤ 29), and uses a return
              type large enough to support this (i.e., at least 64 bits).
            - Now supports k < 0 or k > n (returning 0 as expected).
            - Now throws an exception if n is outside the allowed range.
        Function binomSmall():
            - This is now consteval, which means it cannot be called at
              runtime.  As a result, Python users can no longer use this
              function at all: if you are in Python you should call
              binomMedium() instead.
        Function columnEchelonForm():
            - Cleaned up and relaxed the preconditions.